Feat: refactor builder api and interfaces
