# src/testapi/interfaces/TestapiResponse.ts
@@ -1,0 +1,6 @@
+
+    export interface TestapiResponse {
+    token: string;
+    expiresIn: number;
+   }
+    
