# src/testapi/testapiController.ts
@@ -1,4 +1,5 @@
-import {
+
+    import {
         Body,
         Controller,
         Get,
@@ -8,26 +9,29 @@ import {
         Route,
         SuccessResponse,
       } from "tsoa";
-      import { Testapi } from "./testapi";
-      import { TestapiService, TestapiParams } from "./testapiService";
+    import { ServiceResult } from "../utils/interfaces/ServiceResult";
+    import { TestapiResponse } from "./interfaces";  
+    import { TestapiService, } from "./testapiService"; 
       
       @Route("testapi")
-      export class TestapiController extends Controller {
+      export class Testapiontroller extends Controller {
         @Get("{userId}")
         public async getUser(
           @Path() userId: number,
           @Query() name?: string
-        ): Promise<Testapi> {
-          return new TestapiService().get(userId, name);
+        ): Promise<ServiceResult<TestapiResponse>> {
+          const resp =  new TestapiService().get(userId, name);
+          return resp
         }
       
         @SuccessResponse("201", "Created") // Custom success response
         @Post()
         public async createTestapi(
-          @Body() requestBody: TestapiParams
-        ): Promise<void> {
+          @Body() requestBody: {test: string}
+        ): Promise<ServiceResult<TestapiResponse>> {
           this.setStatus(201); // set return status 201
-          new TestapiService().create(requestBody);
-          return;
+          const resp = new TestapiService().create(requestBody);
+          return resp;
         }
       }
+    
